--- a/input_target_pairs.ipynb
+++ b/input_target_pairs.ipynb
@@ -169,7 +169,7 @@
     "            self.input_ids.append(torch.tensor(input_chunk))\n",
     "            self.target_ids.append(torch.tensor(target_chunk))\n",
     "\n",
-    "            ## each input output pairs is a tensor of shape (max_length)\n",
+    "            ## each input output pairs is a tensor of shape (max_lengthx)\n",
     "            ## and it contains max_length prediction task\n",
     "            ## i.e. if max_length = 4\n",
     "            ## then input is [model, predicts, next, token]\n",
