--- a/gpt2_model.ipynb
+++ b/gpt2_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -138,15 +138,15 @@
      "output_type": "stream",
      "text": [
       "Output shape: torch.Size([2, 4, 50257])\n",
-      "tensor([[[ 0.4093,  0.6366, -0.3657,  ...,  0.2840,  0.2277, -0.4068],\n",
-      "         [ 0.1320, -0.5946, -0.8225,  ...,  0.1029,  0.3817, -0.5678],\n",
-      "         [ 1.1542, -0.1230,  0.0244,  ..., -0.0413, -0.6898, -0.1426],\n",
-      "         [-1.1784,  0.2778, -0.1429,  ...,  0.7957,  0.3100, -0.0979]],\n",
+      "tensor([[[ 0.3613,  0.4222, -0.0711,  ...,  0.3483,  0.4661, -0.2838],\n",
+      "         [-0.1792, -0.5660, -0.9485,  ...,  0.0477,  0.5181, -0.3168],\n",
+      "         [ 0.7120,  0.0332,  0.1085,  ...,  0.1018, -0.4327, -0.2553],\n",
+      "         [-1.0076,  0.3418, -0.1190,  ...,  0.7195,  0.4023,  0.0532]],\n",
       "\n",
-      "        [[-0.1427, -0.0037, -0.3014,  ...,  0.7300,  0.4793, -0.8115],\n",
-      "         [-0.0651,  0.2773,  0.1059,  ...,  0.7891, -0.1348,  0.3851],\n",
-      "         [ 0.9832,  1.0264, -0.3386,  ...,  0.8984,  0.4766, -0.3605],\n",
-      "         [ 0.0496,  0.2019,  0.4266,  ...,  1.0026, -0.5675, -0.0563]]],\n",
+      "        [[-0.2564,  0.0900,  0.0335,  ...,  0.2659,  0.4454, -0.6806],\n",
+      "         [ 0.1230,  0.3653, -0.2074,  ...,  0.7705,  0.2710,  0.2246],\n",
+      "         [ 1.0558,  1.0318, -0.2800,  ...,  0.6936,  0.3205, -0.3178],\n",
+      "         [-0.1565,  0.3926,  0.3288,  ...,  1.2630, -0.1858,  0.0388]]],\n",
       "       grad_fn=<UnsafeViewBackward0>)\n"
      ]
     }
@@ -157,6 +157,108 @@
     "logits = model(batch)\n",
     "print(\"Output shape:\", logits.shape)\n",
     "print(logits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Cool now let's use the model to generate text\n",
+    "\n",
+    "def generate_text(model,input,max_new_tokens,context_size):\n",
+    "    \"\"\"\n",
+    "    Generate text using the model\n",
+    "    Args:\n",
+    "        model: The GPT model\n",
+    "        input: input of shape (batch_size, n_tokens)\n",
+    "        max_new_tokens: The maximum number of new tokens to generate\n",
+    "        context_size: The size of the context window\n",
+    "    Returns:\n",
+    "        The generated text\n",
+    "    \"\"\"\n",
+    "\n",
+    "    for _ in range(max_new_tokens):\n",
+    "        # if input is larger than context size, truncate the input\n",
+    "        input_chunk = input[:, -context_size:]\n",
+    "        with torch.no_grad():\n",
+    "            logits = model(input_chunk)\n",
+    "        # we need to get only the last token's logits to get the next token\n",
+    "        logits = logits[:, -1, :]\n",
+    "        # apply softmax to get the probabilities\n",
+    "        probs = torch.softmax(logits, dim=-1)\n",
+    "        # sample the next token\n",
+    "        next_token = torch.argmax(probs, dim=-1, keepdim=True)\n",
+    "        # append the next token to the input\n",
+    "        input = torch.cat([input, next_token], dim=1)\n",
+    "    return input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "encoded: [15496, 11, 314, 716]\n",
+      "encoded_tensor.shape: torch.Size([1, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_context = \"Hello, I am\"\n",
+    "encoded = tokenizer.encode(start_context)\n",
+    "print(\"encoded:\", encoded)\n",
+    "encoded_tensor = torch.tensor(encoded).unsqueeze(0) #A\n",
+    "print(\"encoded_tensor.shape:\", encoded_tensor.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output: tensor([[15496,    11,   314,   716, 27018, 24086, 47843, 30961, 42348,  7267]])\n",
+      "Output length: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.eval() #A\n",
+    "out = generate_text(\n",
+    "model=model,\n",
+    "input=encoded_tensor,\n",
+    "max_new_tokens=6,\n",
+    "context_size=GPT_CONFIG_124M[\"context_length\"]\n",
+    ")\n",
+    "print(\"Output:\", out)\n",
+    "print(\"Output length:\", len(out[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, I am Featureiman Byeswickattribute argue\n"
+     ]
+    }
+   ],
+   "source": [
+    "decoded_text = tokenizer.decode(out.squeeze(0).tolist())\n",
+    "print(decoded_text)"
    ]
   },
   {
