Multi head latent attention with RoPE

--- a/multi_head_latent_attention.ipynb
+++ b/multi_head_latent_attention.ipynb
@@ -58,10 +58,10 @@
     "    K -> Ckv * Wuk -> [2,768]\n",
     "    V -> Ckv * Wuv -> [2,768]\n",
     "    Attention scores -> Q * K.T -> [2,2] \n",
-    "    Q * K.T -> X * Wdkv * (Ckv * Wuk).T \n",
-    "    Q * K.T -> X * Wdkv * Wuk.T * Ckv.T (we can say the multiplication of weight i.e. Wdkv * Wuk.T) is something which is always fixed \n",
-    "    Q * K.T -> X * (Wdkv * Wuk.T) * (X * Wdkv).T\n",
-    "    X * (Wdkv * Wuk.T) -> Absorbed query \n",
+    "    Q * K.T -> X * Wq * (Ckv * Wuk).T \n",
+    "    Q * K.T -> X * Wq * Wuk.T * Ckv.T (we can say the multiplication of weight i.e. Wdkv * Wuk.T) is something which is always fixed \n",
+    "    Q * K.T -> X * (Wq * Wuk.T) * (X * Wdkv).T\n",
+    "    X * (Wq * Wuk.T) -> Absorbed query \n",
     "    (X * Wdkv).T -> this is cached every time basically Ckv\n",
     "    \n",
     "    \n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,13 +159,7 @@
     "        \n",
     "        out = torch.cat(out_heads, dim=-1) # (B,S,D)\n",
     "\n",
-    "        return self.W_o(out), kv_cache\n",
-    "                \n",
-    "        \n",
-    "                \n",
-    "        \n",
-    "                \n",
-    "    "
+    "        return self.W_o(out), kv_cache"
    ]
   },
   {
@@ -192,7 +186,7 @@
     "    torch.manual_seed(0)\n",
     "    \n",
     "    model = MLA(d_model=8,n_heads=2,kv_latent_dim=4)\n",
-    "\n",
+    "    \n",
     "    x1 = torch.randn(1,5,8) # (batch_size, seq_len, d_model)\n",
     "    out1, kv1 = model(x1)\n",
     "    \n",
